[package]
name = "network-watchdog"
version = "0.1.0"
edition = "2021"

[dependencies]
clap = { version = "4.4", features = ["derive"] }
tokio = { version = "1.37", features = ["rt-multi-thread", "macros", "time"] }
reqwest = { version = "0.12", features = ["rustls-tls"] }
anyhow = "1.0"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }

windows = { version = "0.54", features = [
    "Devices_Radios",
    "Foundation_Collections",
    "Win32_Foundation",
    "Win32_System_Com",
    "Win32_System_Threading",
    "Win32_NetworkManagement_WiFi",
    "Win32_NetworkManagement_Ndis",
    "Win32_NetworkManagement_NetShell",
    "Win32_UI_Shell",
    "Win32_System_Ole",
    "Win32_Networking_WinSock",
    "Win32_Devices_DeviceAndDriverInstallation",
] }

[profile.dev]
opt-level = 0

[profile.release]
opt-level = "z"
lto = true
strip = true
panic = 'abort'
